--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <link rel="shortcut icon" type="image/png" href="/static/favicon.png"/>
-    <title>kumory ecloud</title>
+    <title>kumori ecloud</title>
   </head>
   <body>
     <div id="app"></div>
