--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">    
     <link rel="shortcut icon" type="image/png" href="/static/favicon.png"/>
-    <title>kumori ecloud</title>
+    <title>kumori dashboard</title>
   </head>
   <body>
     <div id="app"></div>
