--- a/index.html
+++ b/index.html
@@ -7,35 +7,16 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css" />
   <link rel="shortcut icon" type="image/png" href="/static/favicon.png" />
 
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet" />
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 
-  <!-- Bootstrap Core CSS -->
-  <link rel="stylesheet" type="text/css" href="/static/css/bootstrap/css/bootstrap.min.css" />
-  <!--MetisMenu CSS -->
-  <link rel="stylesheet" type="text/css" href="/static/css/metisMenu/metisMenu.min.css" />
   <!-- Custom CSS -->
-  <link rel="stylesheet" type="text/html" href="/static/css/dist/css/sb-admin-2.css" />
-
-  <!-- Custom Fonts -->
-  <link rel="stylesheet" type="text/css" href="/static/css/font-awesome/css/font-awesome.min.css" />
+  <link rel="stylesheet" type="text/html" href="/static/css/sb-admin-2/sb-admin-2.css" />
   <link rel="stylesheet" type="text/css" href="/static/css/graph-creator.css" />
-
-  <!-- Jquery -->
-  <script src="/static/js/jquery/jquery.min.js"></script>
-
-  <!-- Metis Menu Plugin JavaScript -->
-  <script src="/static/js/metisMenu/metisMenu.min.js"></script>
-
-  <!-- Custom Theme JavaScript -->
-  <script src="/static/js/sb-admin-2/sb-admin-2.js"></script>
-
-  <!-- Bootstrap Core JavaScript -->
-  <script src="/static/css/bootstrap/js/bootstrap.min.js"></script>
-
 
   <script src="/static/js/d3.v3.js" charset="utf-8"></script>
   <script src="/static/js/FileSaver.min.js" charset="utf-8"></script>
-
-  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
   <title>kumori dashboard</title>
 </head>
