--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css" /> -->
   <link rel="shortcut icon" type="image/png" href="/static/favicon.png" />
   <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
-  <title>kumori dashboard</title>
+  <title>Kumori Dashboard</title>
 
 </head>
 
